Add endpoints for processes and manual trigger of scheduled payments
